fixed cta button z-index issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,23 +354,30 @@ body {
     margin-top: 11rem;
     margin-bottom: 6rem; }
   .hero__cta {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 2.5rem;
-    width: 49.1rem;
-    height: 12.3rem;
     position: relative;
-    background: #FFFFFF;
-    border-radius: 10px;
-    box-shadow: 0px 20px 30px 0px rgba(71, 80, 90, 0.1);
-    opacity: 0;
-    transform: translateX(-30rem);
-    transition: all 600ms ease-in-out; }
-    .hero__cta.active {
-      opacity: 1;
-      transform: translateX(0); }
+    width: 49.1rem;
+    height: 12.3rem; }
+    @media (max-width: 35.5em) {
+      .hero__cta {
+        width: 45rem; } }
+    .hero__cta__item {
+      opacity: 0;
+      transform: translateX(-30rem);
+      transition: all 600ms ease-in-out;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 2.5rem;
+      width: 100%;
+      height: 100%;
+      background: #FFFFFF;
+      border-radius: 10px;
+      box-shadow: 0px 20px 30px 0px rgba(71, 80, 90, 0.1);
+      z-index: 100; }
+      .hero__cta__item.active {
+        opacity: 1;
+        transform: translateX(0); }
     .hero__cta__text > span {
       color: #7D8186;
       font-size: 1.3rem;
