--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -19,26 +19,36 @@
     }
 
     &__cta {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 2.5rem;
+        position: relative;
         width: 49.1rem;
         height: 12.3rem;
-        position: relative;
 
-        background: #FFFFFF;
-        border-radius: 10px;
-        box-shadow: 0px 20px 30px 0px rgba(#47505a1a, 0.1);
+        @include respond(landscapePhone) {
+            width: 45rem;
+        }
 
-        opacity: 0;
-        transform: translateX(-30rem);
-        transition: all 600ms ease-in-out;
+        &__item {
+            opacity: 0;
+            transform: translateX(-30rem);
+            transition: all 600ms ease-in-out;
 
-        &.active {
-            opacity: 1;
-            transform: translateX(0);
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2.5rem;
+            width: 100%;
+            height: 100%;
+            background: #FFFFFF;
+            border-radius: 10px;
+            box-shadow: 0px 20px 30px 0px rgba(#47505a1a, 0.1);
+
+            z-index: 100;
+
+            &.active {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
 
         &__text {
